# server/config/swagger/kibopush.json
@@ -7910,7 +7910,7 @@
         }
       }
     },
-    "/webhooks/:id": {
+    "/webhooks/": {
       "get": {
         "description": "gives the details of the webhook for a particular page",
         "consumes": [
@@ -7930,8 +7930,10 @@
                   "description": "success"
                 },
                 "payload": {
-                  "type": "object",
-                  "$ref": "#/definitions/Webhook"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/Webhook"
+                  }
                 }
               }
             }
@@ -8011,32 +8013,13 @@
         ],
         "parameters": [
           {
-            "name": "_id",
-            "in": "formData",
-            "description": "The unique id of the autopost to edit",
-            "type": "string",
-            "required": true
-          },
-          {
-            "name": "web_url",
-            "in": "formData",
-            "description": "The url to send info to",
-            "type": "string",
-            "required": true
-          },
-          {
-            "name": "isEnabled",
-            "in": "formData",
-            "description": "Enable or disable the webhook",
-            "type": "boolean",
-            "required": true
-          },
-          {
-            "name": "optIn",
-            "in": "formData",
-            "description": "Enable or disable subscription types",
-            "type": "string",
-            "required": true
+            "name": "webhook",
+            "in": "body",
+            "description": "The survey details",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/WebhookEdit"
+            }
           }
         ],
         "responses": {
@@ -10127,6 +10110,27 @@
           "type": "string",
           "description": "the error message",
           "readOnly": true
+        },
+        "optIn": {
+          "type": "object"
+        }
+      }
+    },
+    "WebhookEdit": {
+      "type": "object",
+      "description": "This table is used to store facebook webhooks information",
+      "properties": {
+        "_id": {
+          "type": "string",
+          "description": "unique id of the record"
+        },
+        "webhook_url": {
+          "type": "string",
+          "description": "The url to send info to"
+        },
+        "isEnabled": {
+          "type": "boolean",
+          "description": "Whether the webhook is enabled or not"
         },
         "optIn": {
           "type": "object"
